# litmuz-agent

./: .dockerignore  .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
apps/api/: README.md  pyproject.toml
apps/api/src/litmuz_api/: __init__.py  app.py
apps/api/tests/: test_app.py
apps/cli/: README.md  demo.py  sample_memo.md  verify.py
apps/mcp/: Dockerfile  README.md  pyproject.toml
apps/mcp/src/litmuz_mcp/: __init__.py  server.py  tools.py
apps/mcp/tests/: test_tools.py
apps/web/: .env.example  next.config.mjs  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx  page.tsx  providers.tsx
apps/web/app/contact/: page.tsx
apps/web/app/methodology/: page.tsx
apps/web/app/progress/: page.tsx
apps/web/app/queue/: page.tsx
apps/web/app/report/: page.tsx
apps/web/components/: AccountMenu.tsx  AppFrame.tsx  AuthProvider.tsx  ClaimCard.tsx  Footer.tsx  LoginGate.tsx  Modal.tsx  ProgressPanel.tsx  ReportPanel.tsx  ReviewForm.tsx  ReviewPanel.tsx  SessionsPanel.tsx  UpgradeModal.tsx  VerdictBadge.tsx
apps/web/e2e/: design.spec.ts  fixtures.ts  flow.spec.ts  honest-negatives.spec.ts  mode.spec.ts  queue.spec.ts  review.spec.ts
apps/web/lib/: api.ts  auth.ts  cognito.ts  csv.ts  types.ts  verdict.ts
apps/web/public/: site.webmanifest
apps/worker/: Dockerfile  README.md  pyproject.toml
apps/worker/src/litmuz_worker/: __init__.py  __main__.py  worker.py
apps/worker/tests/: test_worker.py
fixtures/citations/: records.json
infra/migrations/litmuz/: 001_jobs.sql  002_reports_claims.sql  003_citations_evidence_verdicts.sql  004_reviewer_actions.sql  005_roles_grants.sql  006_job_memo.sql  007_job_title.sql  008_reports_job_unique.sql  009_job_mode.sql  README.md  bootstrap.py
