[project]
name = "litmuz-api"
version = "0.0.0"
description = "Litmuz REST API adapter (FastAPI)."
requires-python = ">=3.11"
dependencies = [
    "litmuz-core",
    "litmuz-store",
    "litmuz-service",
    "fastapi>=0.110",
    "psycopg[binary]>=3.1",
]

[tool.uv.sources]
litmuz-core = { workspace = true }
litmuz-store = { workspace = true }
litmuz-service = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/litmuz_api"]
