[project]
name = "litmuz-mcp"
version = "0.0.0"
description = "Litmuz MCP server adapter (stdio and Streamable HTTP)."
requires-python = ">=3.11"
dependencies = [
    "litmuz-core",
    "litmuz-store",
    "litmuz-service",
    "litmuz-api",
    "mcp>=1.2",
    "psycopg[binary]>=3.1",
    "uvicorn>=0.27",
    # The hosted transport submits jobs (SqsQueue) and judges synchronously (AnthropicClient);
    # both import their SDK lazily, so the deps must be declared here.
    "boto3>=1.34",
    "anthropic>=0.40",
]

[tool.uv.sources]
litmuz-core = { workspace = true }
litmuz-store = { workspace = true }
litmuz-service = { workspace = true }
litmuz-api = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/litmuz_mcp"]
